fixed image width to correctly align with paragraphs in a given article

--- a/assets/themes/jb-svbtle/css/base.css
+++ b/assets/themes/jb-svbtle/css/base.css
@@ -141,8 +141,9 @@ article img, article object {
 	display: block;
 	margin: 0 auto;
 	padding: 0;
+	width: 100%;
 	max-width: 657px;
-	float: none
+	float: none;
 }
 article iframe,article object{min-height:250px;min-width:0}
 ul,ol{margin-bottom:20px;padding:0;margin:0;margin-left:20px}
